<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle">Shuffle</string>
    <string name="favourites_btn">Favourites</string>
    <string name="playlists_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_btn">Back</string>
    <string name="start_tv">0: 0</string>
    <string name="end_tv">Loading</string>

    <string name="repeat_btn">Repeat</string>
    <string name="equalizer_btn">Equalizer</string>
    <string name="timer_btn">Timer</string>
    <string name="share_btn">Share</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="setting">Setting</string>
    <string name="song_album">Song Album</string>
    <string name="min_15">15 Minutes</string>
    <string name="min_30">30 Minutes</string>
    <string name="min_60">60 Minutes</string>
    <string name="search_view">Search View</string>
    <string name="song_image">Song Image</string>
    <string name="playlist_delete">Delete</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="user_name">Your Name</string>
    <string name="add_song">Add</string>
    <string name="remove_all">Remove All</string>

</resources>