<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    android:layout_margin="10dp"
    app:strokeColor="@color/cool_pink">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:src="@mipmap/music_player_icon_round"
        app:shapeAppearanceOverlay="@style/curved"
        android:contentDescription="@string/song_image"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/playlistName"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/playlist_name"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:layout_marginTop="130dp"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:contentDescription="@string/playlist_name"/>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/playlistDeleteBtn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/delete_icon"
        android:tint="@color/cool_pink"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="125dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/playlist_delete"
        />
    
</com.google.android.material.card.MaterialCardView>