<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/shuffleBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/shuffle"
                    android:text="@string/shuffle"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:drawableTop="@drawable/shuffle_icon"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/favouriteBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:contentDescription="@string/favourites_btn"
                    android:text="@string/favourites_btn"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:drawableTop="@drawable/favorite_icon"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/playlistBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/playlist_icon"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/playlists_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:contentDescription="@string/playlists_btn"
                    android:layout_weight="1"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

            <!-- Total Songs Button -->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/totalSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_songs"
                android:textColor="@color/black"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="4dp"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="12dp"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@drawable/scroll_bar_icon"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

        <!-- Fragment Container  -->
        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nowPlaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:name="com.example.musicplayer.Fragments.NowPlayingFragment"
            tools:layout="@layout/fragment_now_playing"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>

</androidx.drawerlayout.widget.DrawerLayout>